--- a/source/less/blocks/info-cat.less
+++ b/source/less/blocks/info-cat.less
@@ -1,11 +1,17 @@
+.info-cat {
+  padding: 0;
+  height: 190px;
+  padding: 6px 0;
+}
+
 .info-cat label {
     margin: 0;
     margin-left: 20px;
   }
 
-  .form__info-cat input[type="text"],
-  .form__info-cat input[type="number"] {
-    margin: 7px 0px 12px 10px;
+  .info-cat input[type="text"],
+  .info-cat input[type="number"] {
+    margin: 7px 0px 7px 10px;
     border: 1px solid #e6e6e6;
     height: 41px;
     text-transform: uppercase;
@@ -14,23 +20,23 @@
     font-size: 16px;
   }
 
-  .form__info-cat input[type="text"]:valid ,
-  .form__info-cat input[type="number"]:valid {
+  .info-cat input[type="text"]:valid ,
+  .info-cat input[type="number"]:valid {
     border: 2px solid #e6e6e6;
   }
 
-  .form__info-cat input[type="text"]:invalid ,
-  .form__info-cat input[type="number"]:invalid {
+  .info-cat input[type="text"]:invalid ,
+  .info-cat input[type="number"]:invalid {
     border: 2px solid #ff8282;
   }
 
-  .form__info-cat input[type="text"]:hover ,
-  .form__info-cat input[type="number"]:hover {
+  .info-cat input[type="text"]:hover ,
+  .info-cat input[type="number"]:hover {
     border: 1px solid #cdcdcd;
   }
 
-  .form__info-cat input[type="text"]:focus ,
-  .form__info-cat input[type="number"]:focus {
+  .info-cat input[type="text"]:focus ,
+  .info-cat input[type="number"]:focus {
     border: 2px solid #444444;
     outline: none;
   }
@@ -51,12 +57,16 @@
   }
 
 @media (min-width: @tablet-width) {
+  .info-cat {
+    padding: 20px 0;
+  }
+
   .info-cat label {
     margin-left: 70px;
   }
 
-  .form__info-cat input[type="text"],
-  .form__info-cat input[type="number"] {
+  .info-cat input[type="text"],
+  .info-cat input[type="number"] {
     margin: 7px 0px 7px 10px;
     border: 1px solid #e6e6e6;
     height: 45px;
@@ -67,23 +77,23 @@
     font-size: 20px;
   }
 
-  .form__info-cat input[type="text"]:valid ,
-  .form__info-cat input[type="number"]:valid {
+  .info-cat input[type="text"]:valid ,
+  .info-cat input[type="number"]:valid {
     border: 2px solid #e6e6e6;
   }
 
-  .form__info-cat input[type="text"]:invalid ,
-  .form__info-cat input[type="number"]:invalid {
+  .info-cat input[type="text"]:invalid ,
+  .info-cat input[type="number"]:invalid {
     border: 2px solid #ff8282;
   }
 
-  .form__info-cat input[type="text"]:hover ,
-  .form__info-cat input[type="number"]:hover {
+  .info-cat input[type="text"]:hover ,
+  .info-cat input[type="number"]:hover {
     border: 1px solid #cdcdcd;
   }
 
-  .form__info-cat input[type="text"]:focus ,
-  .form__info-cat input[type="number"]:focus {
+  .info-cat input[type="text"]:focus ,
+  .info-cat input[type="number"]:focus {
     border: 2px solid #444444;
     outline: none;
   }
@@ -117,9 +127,9 @@
     margin: 0 40px;
   }
 
-  .form__info-cat input[type="text"],
-  .form__info-cat input[type="number"] {
-    margin: 7px 0px 7px 10px;
+  .info-cat input[type="text"],
+  .info-cat input[type="number"] {
+    margin: 7px 0px 15px 15px;
     border: 1px solid #e6e6e6;
     height: 45px;
     text-transform: uppercase;
@@ -127,36 +137,36 @@
     font-family: "Oswald", "Arial", sans-serif;
   }
 
-  .form__info-cat input[type="text"]:valid ,
-  .form__info-cat input[type="number"]:valid {
+  .info-cat input[type="text"]:valid ,
+  .info-cat input[type="number"]:valid {
     border: 2px solid #e6e6e6;
   }
 
-  .form__info-cat input[type="text"]:invalid ,
-  .form__info-cat input[type="number"]:invalid {
+  .info-cat input[type="text"]:invalid ,
+  .info-cat input[type="number"]:invalid {
     border: 2px solid #ff8282;
   }
 
-  .form__info-cat input[type="text"]:hover ,
-  .form__info-cat input[type="number"]:hover {
+  .info-cat input[type="text"]:hover ,
+  .info-cat input[type="number"]:hover {
     border: 1px solid #cdcdcd;
   }
 
-  .form__info-cat input[type="text"]:focus ,
-  .form__info-cat input[type="number"]:focus {
+  .info-cat input[type="text"]:focus ,
+  .info-cat input[type="number"]:focus {
     border: 2px solid #444444;
     outline: none;
   }
 
   .info-cat__name input[type="text"] {
-    width: 504px;
+    width: 490px;
   }
 
   .info-cat__weight input[type="number"] {
-    width: 475px;
+    width: 463px;
   }
 
   .info-cat__age input[type="number"] {
-    width: 435px;
+    width: 420px;
   }
 }
