--- a/source/less/blocks/list-product.less
+++ b/source/less/blocks/list-product.less
@@ -38,7 +38,7 @@
     padding: 0;
   }
 
-  .list-product__item--p {
+  .list-product__item-p {
     margin-top: -5px;
     margin-bottom: 25px;
   }
@@ -118,7 +118,7 @@
         margin: 7px 0 17px 37px;
       }
 
-      .list-product__item--p {
+      .list-product__item-p {
         display: flex;
         justify-content: space-between;
         margin: 0 37px;
@@ -189,7 +189,7 @@
         height: 15px;
       }
 
-      .list-product__item--p {
+      .list-product__item-p {
         display: flex;
         justify-content: space-between;
         margin: 0 27px 0 27px;
