--- a/source/less/blocks/list-social.less
+++ b/source/less/blocks/list-social.less
@@ -2,7 +2,7 @@
     position: relative;
     display: flex;
     list-style: none;
-    padding: 20px 0;
+    padding: 16px 0 5px 0;
     min-height: 19px;
     margin: 0 20px;
     border-bottom: 1px solid #d9d9d9;
@@ -10,16 +10,31 @@
 
   .list-social li {
     margin: 0;
-    margin-right: 20px;
+    padding: 0;
+    margin-right: 25px;
     margin-left: 0px;
   }
 
   .list-social li:first-child {
-    margin-left: 70px;
+    margin-left: 73px;
   }
 
   .list-social svg {
     fill: #666666;
+  }
+
+  .list-social .icon-vk {
+    width: 33px;
+  }
+
+  .list-social .icon-ins {
+    width: 23px;
+    margin-right: 10px;
+  }
+
+  .list-social .icon-fb {
+    width: 14px;
+    margin-top: -5px;
   }
 
   .list-social svg:active {
@@ -39,7 +54,7 @@
     padding: 24px 14px;
     min-height: 19px;
     margin: 35px 50px;
-    margin-left: 25px;
+    margin-left: 20px;
     margin-top: 40px;
     border: none;
     min-width: 125px;
@@ -58,6 +73,21 @@
 
   .list-social svg {
     fill: #666666;
+  }
+
+  .list-social .icon-vk {
+    width: 40px;
+  }
+
+  .list-social .icon-ins {
+    width: 33px;
+    margin-right: 0px;
+  }
+
+  .list-social .icon-fb {
+    width: 24px;
+    margin-top: 0px;
+    margin-left: -5px;
   }
 
   .list-social svg:active {
