--- a/source/less/blocks/slider.less
+++ b/source/less/blocks/slider.less
@@ -1,4 +1,4 @@
-.example__slider {
+.slider {
     margin-top: 25px;
   }
 
@@ -72,7 +72,7 @@
   }
 
 @media (min-width: @tablet-width) {
-  .example__slider {
+  .slider {
     margin-top: 75px;
   }
 
@@ -152,7 +152,7 @@
 }
 
 @media (min-width: @desktop-width) {
-  .example__slider {
+  .slider {
     width: 690px;
     height: 500px;
     z-index: 1;
