--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,8 +1,6 @@
 @import "blocks/body.less";
 @import "blocks/page-header.less";
-@import "blocks/logo-header.less";
-@import "blocks/button-header.less";
-@import "blocks/list-menu.less";
+@import "blocks/nav.less";
 @import "blocks/program.less";
 @import "blocks/advantages.less";
 @import "blocks/map.less";
@@ -27,6 +25,5 @@
 @import "blocks/catalog-product.less";
 @import "blocks/catalog-list.less";
 @import "blocks/copyright.less";
-@import "blocks/logo-footer.less";
 @import "blocks/list-social.less";
 @import "blocks/block-weight.less";
