--- a/source/less/blocks/additional.less
+++ b/source/less/blocks/additional.less
@@ -1,9 +1,14 @@
+.additional {
+  width: 280px;
+  padding: 5px 0;
+}
+
 .legend__add {
   padding-top: 14px;
   margin-bottom: 15px;
 }
 
-.form__additional::after {
+.additional::after {
   content: "";
   position: absolute;
   width: 136px;
@@ -13,33 +18,29 @@
   top: 28px;
 }
 
-.form__additional label {
+.additional label {
   margin-left: 20px;
 }
 
-.form__additional__list-check {
+.additional__list-check {
   list-style: none;
   margin: 0;
   padding: 0;
+  margin-top: 7px;
 }
 
-.form__additional__list-check li {
-  padding: 0;
-  margin: 15px 0;
-}
-
-.form__additional__list-check li {
-  margin: 0;
+.additional__list-check li {
   padding: 10px 0;
+  margin: 0;
 }
 
-.form__additional-checkbox {
+.additional-checkbox {
   position: relative;
   cursor: pointer;
   padding-left: 46px;
 }
 
-.form__additional-checkbox input[type="checkbox"] + .checkbox-indicator {
+.additional-checkbox input[type="checkbox"] + .checkbox-indicator {
   position: absolute;
   top: 0;
   left: 0;
@@ -50,7 +51,7 @@
   transform: translateY(-50%);
 }
 
-.form__additional-checkbox input[type="checkbox"]:checked + .checkbox-indicator {
+.additional-checkbox input[type="checkbox"]:checked + .checkbox-indicator {
   position: absolute;
   top: 0;
   left: 0;
@@ -64,20 +65,21 @@
   transform: translateY(-50%);
 }
 
-.form__additional-checkbox:active {
+.additional-checkbox:active {
   opacity: 0.3;
 }
 
 @media (min-width: @tablet-width) {
-  .form__additional {
+  .additional {
     height: 220px;
+    padding: 20px 0 15px 0;
   }
 
   .legend__add {
     margin-bottom: 15px;
   }
 
-  .form__additional::after {
+  .additional::after {
     content: "";
     position: absolute;
     width: 446px;
@@ -87,7 +89,7 @@
     top: 35px;
   }
 
-  .form__additional::before {
+  .additional::before {
     content: "";
     position: absolute;
     width: 30px;
@@ -97,11 +99,11 @@
     top: 35px;
   }
 
-  .form__additional label {
+  .additional label {
     margin-left: 30px;
   }
 
-  .form__additional__list-check {
+  .additional__list-check {
     list-style: none;
     margin: 0;
     padding: 0;
@@ -109,19 +111,19 @@
     flex-wrap: wrap;
   }
 
-  .form__additional__list-check li {
+  .additional__list-check li {
     padding: 0;
-    margin: 25px 30px 25px 40px;
+    margin: 25px 20px 20px 40px;
     width: 284px;
   }
 
-  .form__additional-checkbox {
+  .additional-checkbox {
     position: relative;
     cursor: pointer;
     padding-left: 60px;
   }
 
-  .form__additional-checkbox input[type="checkbox"] + .checkbox-indicator {
+  .additional-checkbox input[type="checkbox"] + .checkbox-indicator {
     position: absolute;
     top: 0;
     left: 0;
@@ -132,7 +134,7 @@
     transform: translateY(-50%);
   }
 
-  .form__additional-checkbox input[type="checkbox"]:checked + .checkbox-indicator {
+  .additional-checkbox input[type="checkbox"]:checked + .checkbox-indicator {
     position: absolute;
     top: 0;
     left: 0;
@@ -148,7 +150,7 @@
 }
 
 @media (min-width: @desktop-width) {
-  .form__additional {
+  .additional {
     height: 154px;
   }
 
@@ -156,7 +158,7 @@
     margin-left: 110px;
   }
 
-  .form__additional::after {
+  .additional::after {
     content: "";
     position: absolute;
     width: 1078px;
@@ -166,7 +168,7 @@
     top: 35px;
   }
 
-  .form__additional::before {
+  .additional::before {
     content: "";
     position: absolute;
     width: 70px;
@@ -176,11 +178,11 @@
     top: 35px;
   }
 
-  .form__additional label {
+  .additional label {
     margin-left: 30px;
   }
 
-  .form__additional__list-check {
+  .additional__list-check {
     list-style: none;
     margin: 0;
     padding: 0;
@@ -190,19 +192,19 @@
     margin-top: 25px;
   }
 
-  .form__additional__list-check li {
+  .additional__list-check li {
     padding: 0;
     margin: 25px 10px 25px 40px;
     width: 274px;
   }
 
-  .form__additional-checkbox {
+  .additional-checkbox {
     position: relative;
     cursor: pointer;
     padding-left: 60px;
   }
 
-  .form__additional-checkbox input[type="checkbox"] + .checkbox-indicator {
+  .additional-checkbox input[type="checkbox"] + .checkbox-indicator {
     position: absolute;
     top: 0;
     left: 0;
@@ -213,7 +215,7 @@
     transform: translateY(-50%);
   }
 
-  .form__additional-checkbox input[type="checkbox"]:checked + .checkbox-indicator {
+  .additional-checkbox input[type="checkbox"]:checked + .checkbox-indicator {
     position: absolute;
     top: 0;
     left: 0;
