--- a/source/less/blocks/body.less
+++ b/source/less/blocks/body.less
@@ -34,3 +34,11 @@ body {
        format('woff');
 }
 
+@font-face {
+  font-family: OswaldMedium;
+  src: url('../fonts/oswaldmedium.woff2')
+       format('woff2'),
+       url('../fonts/oswaldmedium.woff')
+       format('woff');
+}
+
