--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,4 +1,4 @@
-.page-footer__copyright {
+.copyright {
     display: flex;
     margin: 0 20px;
     justify-content: space-between;
@@ -41,7 +41,7 @@
   }
 
 @media (min-width: @tablet-width) {
-  .page-footer__copyright {
+  .copyright {
     display: flex;
     margin: 45px 0px;
     margin-top: 50px;
@@ -83,7 +83,7 @@
 }
 
 @media (min-width: @desktop-width) {
-  .page-footer__copyright {
+  .copyright {
     display: flex;
     margin: 45px 30px;
     margin-right: 110px;
