--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -46,6 +46,14 @@
   margin-top: 30px;
   text-align: center;
   margin-top: 37px;
+  display: flex;
+  justify-content: space-between;
+  width: 187px;
+  margin-left: 50px;
+}
+
+.example__text p {
+  margin: 0;
 }
 
 @media (min-width: @tablet-width) {
@@ -67,7 +75,7 @@
     font-size: 60px;
     margin: 10px;
     margin-left: 0px;
-    margin-top: 30px;
+    margin-top: 25px;
     text-align: left;
   }
 
@@ -76,7 +84,7 @@
     line-height: 24px;
     margin-left: 0px;
     width: 680px;
-    margin-top: 50px;
+    margin-top: 52px;
   }
 
   .examle__tablet {
@@ -85,6 +93,8 @@
   }
 
   .example__text {
+    display: flex;
+    flex-direction: column;
     font-size: 20px;
     line-height: 26px;
     margin-top: 22px;
@@ -92,6 +102,12 @@
     margin-left: 0px;
     margin-right: 0px;
     text-align: right;
+    height: 55px;
+  }
+
+  .example__text p {
+    margin: 0;
+    padding: 0;
   }
 }
 
@@ -119,7 +135,7 @@
     margin-left: 0px;
     text-align: left;
     width: 595px;
-    margin-top: -195px;
+    margin-top: -185px;
     background-color: #fff;
     padding-bottom: 44px;
   }
@@ -135,15 +151,19 @@
   .examle__tablet {
     display: flex;
     flex-direction: column;
-    margin-top: 40px;
+    margin-top: 70px;
   }
 
   .example__text {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     font-size: 20px;
-    margin-top: 55px;
-    min-width: 325px;
+    margin-top: 60px;
+    max-width: 325px;
     margin-left: 0px;
     text-align: center;
+    width: 327px;
   }
 
   .example__desktop {
