--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -5,7 +5,6 @@
     text-transform: uppercase;
     border: none;
     margin: 0;
-    padding: 10px 0;
     position: relative;
     width: 320px;
   }
@@ -17,7 +16,7 @@
     color: #000000;
     text-transform: none;
     padding-top: 19px;
-    margin: 0px 0 16px 19px;
+    margin: 0px 0 16px 15px;
     max-width: 186px;
     max-height: 59px;
   }
@@ -54,6 +53,10 @@
     margin-bottom: 32px;
   }
 
+  .form__fieldset-info {
+    min-height: 380px;
+  }
+
 @media (min-width: @tablet-width) {
   .profile__form fieldset {
     font-family: "Oswald", "Arial", sans-serif;
@@ -62,7 +65,6 @@
     text-transform: uppercase;
     border: none;
     margin: 0;
-    padding: 20px 0px;
     position: relative;
     width: 768px;
   }
@@ -73,14 +75,17 @@
     line-height: 36px;
     color: #000000;
     text-transform: none;
-    margin-left: 70px;
+    margin-left: 67px;
     max-width: 525px;
     margin-bottom: 60px;
     max-height: 43px;
   }
 
   .form__fieldset-info {
+    width: 1220px;
     min-height: 545px;
+    display: flex;
+    justify-content: space-between;
   }
 
   .form__button-text {
@@ -104,8 +109,9 @@
     color: #444444;
     text-transform: none;
     text-align: center;
-    margin-left: 60px;
+    margin-left: 20px;
     width: 250px;
+    margin-top: 35px;
   }
 }
 
@@ -131,7 +137,7 @@
     margin-left: 70px;
     display: flex;
     width: 1440px;
-    height: 270px;
+    height: 253px;
   }
 
   .form__button-text {
