--- a/source/less/blocks/list-page.less
+++ b/source/less/blocks/list-page.less
@@ -28,25 +28,25 @@
     top: -2px;
   }
 
-  .item--powder::before {
+  .item-powder::before {
     content: "";
     background-image: url(../img/advantage-powder@1x.png);
     background-position: 50% 50%;
   }
 
-  .item--dining::before {
+  .item-dining::before {
     content: "";
     background-image: url(../img/advantage-dining@1x.png);
     background-position: 50% 50%;
   }
 
-  .item--clock::before {
+  .item-clock::before {
     content: "";
     background-image: url(../img/advantage-clock@1x.png);
     background-position: 50% 50%;
   }
 
-  .item--namber {
+  .item-namber {
     display: none;
   }
 
@@ -72,11 +72,11 @@
     max-height: 302px;
   }
 
-  .item--leaf {
+  .item-leaf {
     width: 230px;
   }
 
-  .item--clock {
+  .item-clock {
     width: 245px;
   }
 
@@ -84,7 +84,7 @@
     margin-right: 145px;
   }
 
-  .item--namber {
+  .item-namber {
     display: block;
     width: 122px;
     height: 235px;
@@ -114,17 +114,17 @@
     top: 0px;
   }
 
-  .item--powder::before {
+  .item-powder::before {
     content: "";
     background-image: url(../img/advantage-powder@1x.png);
   }
 
-  .item--dining::before {
+  .item-dining::before {
     content: "";
     background-image: url(../img/advantage-dining@1x.png);
   }
 
-  .item--clock::before {
+  .item-clock::before {
     content: "";
     background-image: url(../img/advantage-clock@1x.png);
   }
@@ -159,7 +159,7 @@
         margin-right: 0px;
       }
 
-      .item--namber {
+      .item-namber {
         display: block;
         width: 122px;
         height: 235px;
@@ -189,17 +189,17 @@
         top: 0px;
       }
 
-      .item--powder::before {
+      .item-powder::before {
         content: "";
         background-image: url(../img/advantage-powder@1x.png);
       }
 
-      .item--dining::before {
+      .item-dining::before {
         content: "";
         background-image: url(../img/advantage-dining@1x.png);
       }
 
-      .item--clock::before {
+      .item-clock::before {
         content: "";
         background-image: url(../img/advantage-clock@1x.png);
       }
