--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -43,8 +43,13 @@
    font-size: 14px;
    line-height: 20px;
    color: #444444;
-   margin: 27px 0px 0px 10px;
+   margin: 29px 0px 0px 10px;
    max-height: 63px;
+ }
+
+ .map__text p {
+   padding: 0;
+   margin: 0;
  }
 
  .interactiv-map {
@@ -82,7 +87,7 @@
     margin: 0 auto;
   }
 
-  .block--grey {
+  .map__block--grey {
     background-color: #f2f2f2;
   }
 
@@ -91,7 +96,7 @@
     line-height: 24px;
     margin-left: 70px;
     width: 160px;
-    margin-top: 69px;
+    margin-top: 65px;
   }
 
   .map__text {
@@ -101,7 +106,12 @@
     margin-right: 70px;
     width: 155px;
     text-align: right;
-    margin-top: 65px;
+    margin-top: 45px;
+  }
+
+  .map__text p {
+    padding: 0;
+    margin: 15px 0;
   }
 
   .interactiv-map {
@@ -145,7 +155,7 @@
     top: 95px;
   }
 
-  .wrapper--grey {
+  .map__block--grey {
     background-color: #fff;
   }
 
@@ -163,6 +173,12 @@
     margin: 60px 90px 63px 40px;
     width: 155px;
     text-align: left;
+    margin-top: 47px;
+  }
+
+  .map__text p {
+    padding: 0;
+    margin: 15px 0;
   }
 
   .interactiv-map {
