--- a/source/less/blocks/owner.less
+++ b/source/less/blocks/owner.less
@@ -1,4 +1,11 @@
-.form__owner::after {
+.owner {
+  position: relative;
+  width: 280px;
+  padding: 5px 0;
+  height: 210px;
+}
+
+.owner::after {
     content: "";
     position: absolute;
     width: 100px;
@@ -8,12 +15,12 @@
     top: 33px;
   }
 
-.form__owner label {
+.owner label {
   margin-left: 20px;
 }
 
-.form__owner input[type="email"],
-.form__owner input[type="tel"] {
+.owner input[type="email"],
+.owner input[type="tel"] {
   margin: 7px 0px 7px 10px;
   border: 1px solid #e6e6e6;
   min-height: 41px;
@@ -23,48 +30,49 @@
   font-family: "Oswald", "Arial", sans-serif;
 }
 
-.form__owner input[type="email"]:valid ,
-  .form__owner input[type="tel"]:valid {
-    border: 2px solid #e6e6e6;
-  }
+.owner input[type="email"]:valid ,
+.owner input[type="tel"]:valid {
+  border: 2px solid #e6e6e6;
+}
 
-  .form__owner input[type="email"]:invalid ,
-  .form__owner input[type="tel"]:invalid {
+  .owner input[type="email"]:invalid ,
+  .owner input[type="tel"]:invalid {
     border: 2px solid #ff8282;
   }
 
-  .form__owner input[type="email"]:hover ,
-  .form__owner input[type="tel"]:hover {
+  .owner input[type="email"]:hover ,
+  .owner input[type="tel"]:hover {
     border: 1px solid #cdcdcd;
   }
 
-  .form__owner input[type="email"]:focus ,
-  .form__owner input[type="tel"]:focus {
+  .owner input[type="email"]:focus ,
+  .owner input[type="tel"]:focus {
     border: 2px solid #444444;
     outline: none;
   }
 
-.form__owner input[type="text"] {
+.owner input[type="email"] {
   width: 202px;
   margin: 7px 0px 7px 12px;
 }
 
-.form__owner input[type="tel"] {
+.owner input[type="tel"] {
   margin: 7px 0px 7px 10px;
   width: 187px;
 }
 
 @media (min-width: @tablet-width) {
-  .form__owner {
+  .owner {
     min-height: 295px;
     min-height: 268px;
+    padding: 20px 0;
   }
 
-  .form__owner label {
+  .owner label {
     margin-left: 70px;
   }
 
-  .form__owner::after {
+  .owner::after {
     content: "";
     position: absolute;
     width: 145px;
@@ -74,7 +82,7 @@
     top: 41px;
   }
 
-  .form__owner::before {
+  .owner::before {
     content: "";
     position: absolute;
     width: 30px;
@@ -84,9 +92,9 @@
     top: 41px;
   }
 
-  .form__owner input[type="email"],
-  .form__owner input[type="tel"] {
-    margin: 7px 0px 7px 10px;
+  .owner input[type="email"],
+  .owner input[type="tel"] {
+    margin: 0px 0px 20px 20px;
     border: 1px solid #e6e6e6;
     height: 44px;
     text-transform: uppercase;
@@ -95,38 +103,38 @@
     font-family: "Oswald", "Arial", sans-serif;
   }
 
-  .form__owner input[type="email"]:valid ,
-  .form__owner input[type="tel"]:valid {
+  .owner input[type="email"]:valid ,
+  .owner input[type="tel"]:valid {
     border: 2px solid #e6e6e6;
   }
 
-  .form__owner input[type="email"]:invalid ,
-  .form__owner input[type="tel"]:invalid {
+  .owner input[type="email"]:invalid ,
+  .owner input[type="tel"]:invalid {
     border: 2px solid #ff8282;
   }
 
-  .form__owner input[type="email"]:hover ,
-  .form__owner input[type="tel"]:hover {
+  .owner input[type="email"]:hover ,
+  .owner input[type="tel"]:hover {
     border: 1px solid #cdcdcd;
   }
 
-  .form__owner input[type="email"]:focus ,
-  .form__owner input[type="tel"]:focus {
+  .owner input[type="email"]:focus ,
+  .owner input[type="tel"]:focus {
     border: 2px solid #444444;
     outline: none;
   }
 
-  .form__owner input[type="text"] {
-    width: 549px;
+  .owner input[type="email"] {
+    width: 533px;
   }
 
-  .form__owner input[type="tel"] {
-    width: 530px;
+  .owner input[type="tel"] {
+    width: 515px;
   }
 }
 
 @media (min-width: @desktop-width) {
-  .form__owner {
+  .owner {
     min-height: 225px;
     height: 240px;
     position: relative;
@@ -145,7 +153,7 @@
     max-height: 43px;
   }
 
-  .form__owner::after {
+  .owner::after {
     content: "";
     position: absolute;
     width: 777px;
@@ -155,7 +163,7 @@
     top: 43px;
   }
 
-  .form__owner::before {
+  .owner::before {
     content: "";
     position: absolute;
     width: 70px;
@@ -165,10 +173,10 @@
     top: 43px;
   }
 
-  .form__owner label {
+  .owner label {
     margin: 0px;
     width: 600px;
-    margin-top: 15px;
+    margin-top: 0px;
   }
 
   .owner__label {
@@ -177,10 +185,11 @@
     width: 1250px;
     margin: 0;
     margin-left: 110px;
+    margin-top: 10px;
   }
 
-  .form__owner input[type="text"],
-  .form__owner input[type="tel"] {
+  .owner input[type="email"],
+  .owner input[type="tel"] {
     margin: 7px 0px 7px 10px;
     border: 1px solid #e6e6e6;
     height: 44px;
@@ -190,32 +199,32 @@
     font-family: "Oswald", "Arial", sans-serif;
   }
 
-  .form__owner input[type="email"]:valid ,
-  .form__owner input[type="tel"]:valid {
+  .owner input[type="email"]:valid ,
+  .owner input[type="tel"]:valid {
     border: 2px solid #e6e6e6;
   }
 
-  .form__owner input[type="email"]:invalid ,
-  .form__owner input[type="tel"]:invalid {
+  .owner input[type="email"]:invalid ,
+  .owner input[type="tel"]:invalid {
     border: 2px solid #ff8282;
   }
 
-  .form__owner input[type="email"]:hover ,
-  .form__owner input[type="tel"]:hover {
+  .owner input[type="email"]:hover ,
+  .owner input[type="tel"]:hover {
     border: 1px solid #cdcdcd;
   }
 
-  .form__owner input[type="email"]:focus ,
-  .form__owner input[type="tel"]:focus {
+  .owner input[type="email"]:focus ,
+  .owner input[type="tel"]:focus {
     border: 2px solid #444444;
     outline: none;
   }
 
-  .form__owner input[type="email"] {
-    width: 489px;
+  .owner input[type="email"] {
+    width: 479px;
   }
 
-  .form__owner input[type="tel"] {
-    width: 470px;
+  .owner input[type="tel"] {
+    width: 460px;
   }
 }
