--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -18,6 +18,21 @@
   list-style: none;
 }
 
+.page-footer__logo {
+  padding: 39px 76px 31px 76px;
+  margin: 0 20px;
+  position: relative;
+  border-bottom: 1px solid #d9d9d9;
+}
+
+.page-footer__logo-link:hover {
+  opacity: 0.8;
+}
+
+.page-footer__logo-link:active {
+  opacity: 0.6;
+}
+
 @media (min-width: @tablet-width) {
   .page-footer {
     min-width: 768px;
@@ -34,6 +49,16 @@
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
+  }
+
+  .page-footer__logo {
+    padding: 39px 0px;
+    padding-left: 0;
+    margin: 20px 0px;
+    margin-right: 5px;
+    margin-top: 25px;
+    position: relative;
+    border: none;
   }
 }
 
@@ -54,5 +79,15 @@
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
+  }
+
+  .page-footer__logo {
+    padding: 39px 76px;
+    padding-left: 0;
+    margin: 20px 30px;
+    margin-right: 0px;
+    margin-left: 110px;
+    position: relative;
+    border: none;
   }
 }
