--- a/source/less/blocks/program.less
+++ b/source/less/blocks/program.less
@@ -7,12 +7,29 @@
   align-items: center;
 }
 
+.program__weight {
+  color: #111111;
+  font-family: "Oswald", "Arial", sans-serif;
+  background-color: #f2f2f2;
+  min-width: 280px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 266px;
+  margin-top: 0px;
+}
+
 @media (min-width: @tablet-width) {
   .program {
     width: 768px;
     background-color: #fff;
     display: flex;
     flex-direction: column;
+  }
+
+  .program__weight {
+    width: 708px;
+    min-height: 373px;
   }
 }
 
@@ -23,5 +40,11 @@
     display: flex;
     flex-direction: row;
     margin-top: 52px;
+  }
+
+  .program__weight {
+    max-width: 570px;
+    min-height: 372px;
+    margin-left: 110px;
   }
 }
