--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -83,9 +83,11 @@
 
   .form__fieldset-info {
     width: 1220px;
-    min-height: 545px;
+    min-height: 527px;
     display: flex;
     justify-content: space-between;
+    flex-direction: column;
+    margin-bottom: 17px;
   }
 
   .form__button-text {
@@ -138,6 +140,8 @@
     display: flex;
     width: 1440px;
     height: 253px;
+    flex-direction: row;
+    margin-bottom: 0;
   }
 
   .form__button-text {
