--- a/source/less/blocks/list-page.less
+++ b/source/less/blocks/list-page.less
@@ -74,10 +74,21 @@
 
   .item-leaf {
     width: 230px;
+    margin-bottom: 10px;
+  }
+
+  .item-powder {
+    margin-bottom: 10px;
   }
 
   .item-clock {
     width: 245px;
+    max-height: 292px;
+  }
+
+  .item-dining {
+    width: 230px;
+    max-height: 292px;
   }
 
   .list-page__item:nth-child(2n+1) {
