--- a/source/less/blocks/slider.less
+++ b/source/less/blocks/slider.less
@@ -5,6 +5,7 @@
   .slider__img {
       width: 320px;
       height: 240px;
+      margin-top: 10px;
   }
 
   .slider__list {
@@ -19,38 +20,16 @@
     margin-left: 63px;
   }
 
-  .slider__button {
-    position: relative;
-    cursor: pointer;
-    padding-left: 10px;
-    margin: 0 10px;
+  .slider__after {
+    display: none;
   }
 
-  .slider__button input[type="radio"] + .slider-radio {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 15px;
-    height: 15px;
-    border: 1px solid #cfcfcf;
-    border-radius: 50%;
-    top: 50%;
-    transform: translateY(-50%);
-    margin-left: 45px;
-  }
-
-  .slider__button input[type="radio"]:checked + .slider-radio {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 3px;
-    height: 3px;
-    border: 7px solid #fff;
-    background-color: #68b738;
-    box-shadow: 0 2px 1px 0 #cfcfcf;;
-    border-radius: 50%;
-    top: 50%;
-    transform: translateY(-50%);
+  .slider__button-wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 197px;
+    margin-left: 64px;
+    margin-top: 26px;
   }
 
   .slider__button {
@@ -59,16 +38,29 @@
     line-height: 16px;
     text-transform: uppercase;
     color: #111111;
-    border-bottom: 1px dotted #bebebe;
     padding: 5px 0;
+    margin: 0;
   }
 
-  .button-befor {
-    margin-left: 10px;
+  .slider__button2 {
+    width: 82px;
+    height: 13px;
+    border: 1px solid #cdcdcd;
+    background-color: #fff;
+    position: relative;
+    border-radius: 6px;
+    margin-top: 5.5px;
   }
 
-  .slider__after {
-    display: none;
+  .slider__button-radio {
+    width: 35px;
+    height: 6px;
+    background-color: #68b738;
+    position: absolute;
+    top: 3.5px;
+    left: 5px;
+    border-radius: 10px;
+    cursor: pointer;
   }
 
 @media (min-width: @tablet-width) {
@@ -79,6 +71,7 @@
   .slider__img {
     width: 690px;
     height: 517px;
+    margin-left: 20px;
   }
 
   .img__befor {
@@ -102,38 +95,12 @@
     margin-left: 250px;
   }
 
-  .slider__button {
-    position: relative;
-    cursor: pointer;
-    padding-left: 10px;
-    margin: 0 10px;
-  }
-
-  .slider__button input[type="radio"] + .slider-radio {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 15px;
-    height: 15px;
-    border: 1px solid #cfcfcf;
-    border-radius: 50%;
-    top: 50%;
-    transform: translateY(-50%);
-    margin-left: 65px;
-  }
-
-  .slider__button input[type="radio"]:checked + .slider-radio {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 3px;
-    height: 3px;
-    border: 7px solid #fff;
-    background-color: #68b738;
-    box-shadow: 0 2px 1px 0 #cfcfcf;;
-    border-radius: 50%;
-    top: 50%;
-    transform: translateY(-50%);
+  .slider__button-wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 570px;
+    margin-left: 69px;
+    margin-top: 5px;
   }
 
   .slider__button {
@@ -142,12 +109,33 @@
     line-height: 20px;
     text-transform: uppercase;
     color: #111111;
-    border-bottom: 1px dotted #bebebe;
     padding: 5px 0;
+    border-bottom: 1px dotted #bebebe;
+    margin: 0;
   }
 
-  .button-befor {
-    margin-left: 50px;
+  .slider__button2 {
+    width: 428px;
+    height: 6px;
+    border: none;
+    background-color: #dcdcdc;
+    position: relative;
+    border-radius: 6px;
+    margin-top: 15px;
+  }
+
+  .slider__button-radio {
+    position: absolute;
+    left: 200px;
+    border-radius: 10px;
+    width: 7px;
+    height: 7px;
+    border: 13px solid #fff;
+    background-color: #68b738;
+    box-shadow: 0 2px 1px 0 #cfcfcf;;
+    border-radius: 50%;
+    top: 50%;
+    transform: translateY(-50%);
   }
 }
 
@@ -183,18 +171,47 @@
     display: none;
   }
 
+  .slider__button-wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 570px;
+    margin-left: 55px;
+    margin-top: 30px;
+  }
+
   .slider__button {
     font-family: "Oswald", "Arial", sans-serif;
     font-size: 20px;
     line-height: 20px;
     text-transform: uppercase;
     color: #111111;
-    border-bottom: 1px dotted #bebebe;
     padding: 5px 0;
+    border-bottom: 1px dotted #bebebe;
+    margin: 0;
   }
 
-  .button-befor {
-    margin-left: 50px;
+  .slider__button2 {
+    width: 428px;
+    height: 6px;
+    border: none;
+    background-color: #dcdcdc;
+    position: relative;
+    border-radius: 6px;
+    margin-top: 15px;
+  }
+
+  .slider__button-radio {
+    position: absolute;
+    left: 200px;
+    border-radius: 10px;
+    width: 7px;
+    height: 7px;
+    border: 13px solid #fff;
+    background-color: #68b738;
+    box-shadow: 0 2px 1px 0 #cfcfcf;;
+    border-radius: 50%;
+    top: 50%;
+    transform: translateY(-50%);
   }
 }
 
