--- a/source/less/blocks/weight-list.less
+++ b/source/less/blocks/weight-list.less
@@ -62,7 +62,7 @@
 
 @media (min-width: @tablet-width) {
   .weight-list {
-    padding: 40px 0;
+    padding: 0px 0 40px 0;
   }
 
   .weight-list label {
@@ -73,11 +73,11 @@
     list-style: none;
     margin: 0;
     border: 1px solid #ededed;
-    padding: 20px 0 0 0;
+    padding: 15px 0 0 0;
     width: 628px;
     height: 174px;
     margin-left: 70px;
-    margin-top: 25px;
+    margin-top: 0px;
     font-size: 20px;
     line-height: 30px;
   }
