--- a/source/less/blocks/additional.less
+++ b/source/less/blocks/additional.less
@@ -3,7 +3,7 @@
   padding: 5px 0;
 }
 
-.legend__add {
+.additional__legend{
   padding-top: 14px;
   margin-bottom: 15px;
 }
@@ -75,7 +75,7 @@
     padding: 20px 0 15px 0;
   }
 
-  .legend__add {
+  .additional__legend {
     margin-bottom: 15px;
   }
 
@@ -154,7 +154,7 @@
     height: 154px;
   }
 
-  .legend__add {
+  .additional__legend {
     margin-left: 110px;
   }
 
