--- a/source/less/blocks/block-weight.less
+++ b/source/less/blocks/block-weight.less
@@ -134,7 +134,7 @@
         margin: 7px 0 31px 53px;
       }
 
-      .description-pro {
+      .weight__description--pro {
         max-width: 343px;
       }
 
