--- a/source/less/blocks/comment.less
+++ b/source/less/blocks/comment.less
@@ -4,7 +4,7 @@
   height: 225px;
 }
 
-.legend__comment {
+.comment__legend {
   padding-top: 12px;
   margin-bottom: 23px;
 }
@@ -85,7 +85,7 @@
     height: 350px;
   }
 
-  .legend__comment {
+  .comment__legend {
     position: relative;
   }
 
