--- a/source/less/blocks/list-page.less
+++ b/source/less/blocks/list-page.less
@@ -28,25 +28,25 @@
     top: -2px;
   }
 
-  .item-powder::before {
+  .list-page__item--powder::before {
     content: "";
     background-image: url(../img/advantage-powder@1x.png);
     background-position: 50% 50%;
   }
 
-  .item-dining::before {
+  .list-page__item--dining::before {
     content: "";
     background-image: url(../img/advantage-dining@1x.png);
     background-position: 50% 50%;
   }
 
-  .item-clock::before {
+  .list-page__item--clock::before {
     content: "";
     background-image: url(../img/advantage-clock@1x.png);
     background-position: 50% 50%;
   }
 
-  .item-namber {
+  .list-page__item .item-namber {
     display: none;
   }
 
@@ -72,21 +72,21 @@
     max-height: 302px;
   }
 
-  .item-leaf {
+  .list-page__item--leaf {
     width: 230px;
     margin-bottom: 10px;
   }
 
-  .item-powder {
+  .list-page__item--powder {
     margin-bottom: 10px;
   }
 
-  .item-clock {
+  .list-page__item--clock {
     width: 245px;
     max-height: 292px;
   }
 
-  .item-dining {
+  .list-page__item--dining {
     width: 230px;
     max-height: 292px;
   }
@@ -95,7 +95,7 @@
     margin-right: 145px;
   }
 
-  .item-namber {
+  .list-page__item .item-namber {
     display: block;
     width: 122px;
     height: 235px;
@@ -125,17 +125,17 @@
     top: 0px;
   }
 
-  .item-powder::before {
+  .list-page__item--powder::before {
     content: "";
     background-image: url(../img/advantage-powder@1x.png);
   }
 
-  .item-dining::before {
+  .list-page__item--dining::before {
     content: "";
     background-image: url(../img/advantage-dining@1x.png);
   }
 
-  .item-clock::before {
+  .list-page__item--clock::before {
     content: "";
     background-image: url(../img/advantage-clock@1x.png);
   }
@@ -170,7 +170,7 @@
         margin-right: 0px;
       }
 
-      .item-namber {
+      .list-page__item--namber {
         display: block;
         width: 122px;
         height: 235px;
@@ -200,17 +200,17 @@
         top: 0px;
       }
 
-      .item-powder::before {
+      .list-page__item--powder::before {
         content: "";
         background-image: url(../img/advantage-powder@1x.png);
       }
 
-      .item-dining::before {
+      .list-page__item--dining::before {
         content: "";
         background-image: url(../img/advantage-dining@1x.png);
       }
 
-      .item-clock::before {
+      .list-page__item--lock::before {
         content: "";
         background-image: url(../img/advantage-clock@1x.png);
       }
