--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -52,7 +52,7 @@
    margin: 0;
  }
 
- .interactiv-map {
+ .map__interactiv {
    width: 100vw;
    height: 362px;
  }
@@ -114,7 +114,7 @@
     margin: 15px 0;
   }
 
-  .interactiv-map {
+  .map__interactiv {
     width: 100vw;
     height: 398px;
   }
@@ -181,7 +181,7 @@
     margin: 15px 0;
   }
 
-  .interactiv-map {
+  .map__interactiv {
     width: 100vw;
     height: 400px;
   }
