--- a/source/less/blocks/owner.less
+++ b/source/less/blocks/owner.less
@@ -140,14 +140,14 @@
     position: relative;
   }
 
-  .legend__add {
+  .owner__legend {
     font-family: "Oswald", "Arial", sans-serif;
     font-size: 36px;
     line-height: 36px;
     color: #000000;
     text-transform: none;
     margin: 0;
-    margin-left: 70px;
+    margin-left: 110px;
     max-width: 525px;
     margin-bottom: 60px;
     max-height: 43px;
