--- a/source/less/blocks/profile.less
+++ b/source/less/blocks/profile.less
@@ -30,6 +30,17 @@
   width: 228px;
 }
 
+.profile__form fieldset {
+  font-family: "Oswald", "Arial", sans-serif;
+  font-size: 16px;
+  color: #000000;
+  text-transform: uppercase;
+  border: none;
+  margin: 0;
+  position: relative;
+  width: 320px;
+}
+
 @media (min-width: @tablet-width) {
   .profile {
     display: flex;
@@ -67,6 +78,17 @@
     width: 330px;
     margin-top: 0;
     margin-bottom: 40px;
+  }
+
+  .profile__form fieldset {
+    font-family: "Oswald", "Arial", sans-serif;
+    font-size: 20px;
+    color: #000000;
+    text-transform: uppercase;
+    border: none;
+    margin: 0;
+    position: relative;
+    width: 768px;
   }
 }
 
@@ -106,5 +128,17 @@
     width: 330px;
     margin-top: 0px;
     margin-bottom: 57px;
+  }
+
+  .profile__form fieldset {
+    font-family: "Oswald", "Arial", sans-serif;
+    font-size: 20px;
+    color: #000000;
+    text-transform: uppercase;
+    border: none;
+    margin: 0;
+    padding: 0px 0 0 0;
+    position: relative;
+    width: 1440px;
   }
 }
