--- a/source/less/blocks/slider.less
+++ b/source/less/blocks/slider.less
@@ -32,7 +32,7 @@
     margin-top: 26px;
   }
 
-  .slider__button {
+  .slider__button-p {
     font-family: "Oswald", "Arial", sans-serif;
     font-size: 16px;
     line-height: 16px;
@@ -42,7 +42,7 @@
     margin: 0;
   }
 
-  .slider__button2 {
+  .slider__button {
     width: 82px;
     height: 13px;
     border: 1px solid #cdcdcd;
@@ -74,11 +74,6 @@
     margin-left: 20px;
   }
 
-  .img__befor {
-    width: 690px;
-    height: 517px;
-  }
-
   .slider__after {
     display: none;
   }
@@ -103,7 +98,7 @@
     margin-top: 5px;
   }
 
-  .slider__button {
+  .slider__button-p {
     font-family: "Oswald", "Arial", sans-serif;
     font-size: 20px;
     line-height: 20px;
@@ -114,7 +109,7 @@
     margin: 0;
   }
 
-  .slider__button2 {
+  .slider__button {
     width: 428px;
     height: 6px;
     border: none;
@@ -179,7 +174,7 @@
     margin-top: 30px;
   }
 
-  .slider__button {
+  .slider__button-p {
     font-family: "Oswald", "Arial", sans-serif;
     font-size: 20px;
     line-height: 20px;
@@ -190,7 +185,7 @@
     margin: 0;
   }
 
-  .slider__button2 {
+  .slider__button {
     width: 428px;
     height: 6px;
     border: none;
