--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,4 +1,4 @@
-@import "blocks/body.less";
+@import "body.less";
 @import "blocks/page-header.less";
 @import "blocks/nav.less";
 @import "blocks/program.less";
