--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -10,7 +10,7 @@
     text-decoration: none;
   }
 
-  .copyright_text {
+  .copyright__text {
     font-family: "Arial", sans-serif;
     font-size: 16px;
     color: #444444;
@@ -52,7 +52,7 @@
     width: 140px;
   }
 
-  .copyright_text {
+  .copyright__text {
     font-family: "Arial", sans-serif;
     font-size: 16px;
     color: #444444;
@@ -90,7 +90,7 @@
     justify-content: space-between;
   }
 
-  .copyright_text {
+  .copyright__text {
     font-family: "Arial", sans-serif;
     font-size: 16px;
     color: #444444;
