--- a/source/less/blocks/cover.less
+++ b/source/less/blocks/cover.less
@@ -155,7 +155,7 @@
     min-height: 586px;
   }
 
-  .cover_bg-dekstop {
+  .cover__bg-dekstop {
     background-image: url(../img/index-background-desktop@1x.jpg);
     background-color: #65a93c;
     background-repeat: no-repeat;
